--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.7",
+    "@react-pdf/renderer": "^3.1.12",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.16.7",
     "@types/node": "20.6.3",
@@ -21,8 +22,10 @@
     "next": "13.5.2",
     "next-sanity": "^5.5.4",
     "postcss": "8.4.30",
+    "puppeteer": "^21.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.3.3",
     "sanity": "^3.16.7",
     "sanity-plugin-iframe-pane": "^2.5.7",
     "server-only": "^0.0.1",
