--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "file-loader": "^6.2.0"
   }
 }
