--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-pdf": "^7.3.3",
     "sanity": "^3.16.7",
     "sanity-plugin-iframe-pane": "^2.5.7",
