--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sanity": "^3.16.7",
     "sanity-plugin-iframe-pane": "^2.5.7",
     "sanity-plugin-media": "^2.2.2",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "server-only": "^0.0.1",
     "suspend-react": "^0.1.3",
     "tailwindcss": "3.3.3",
